# polymarket-research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.dev.yaml  config.yaml
monitoring/: prometheus.yml
research/: README.md  ROADMAP.md
research/analysis/: backtest_politics.py  calibration.py  extract_preresolution_prices.py  infer_categories.py  validate_crypto_signal.py
research/pipeline/: checkpoint.py  fetch_markets.py  fetch_prices.py  storage.py
src/: main.py
src/api/: client.py  endpoints.py  parsers.py  resilience.py  response_models.py
src/config/: constants.py  settings.py
src/domain/: exceptions.py  models.py  protocols.py
src/execution/: paper_trader.py  position_tracker.py
src/monitoring/: logging.py  metrics.py
src/polymarket_arbitrage/api/: client.py
src/strategies/: base.py  price_discrepancy.py
tests/: conftest.py
tests/unit/: test_client.py  test_domain_models.py  test_paper_trader.py  test_parsers.py  test_resilience.py  test_strategies.py
