[project]
name = "polymarket-research"
version = "0.1.0"
description = "Prediction market probability research system. Calibration modeling and market intelligence for Polymarket."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }

authors = [
  { name = "Jacob Choi", email = "jacob77choi@gmail.com" },
]

dependencies = [
    "httpx[http2]>=0.26.0,<0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.28.0",
    "hypothesis>=6.92.0",
]
lint = [
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "types-pyyaml>=6.0.12",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true
module-name = "polymarket_arbitrage"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "prometheus_client.*",
    "pytest.*",
    "httpx.*",
    "structlog.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=polymarket_arbitrage",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests that may call real APIs",
    "property: Property-based tests using Hypothesis",
]
